--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="" ng-app>
     <head>
+        <script src="js/vendor/angular.min.js"></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
@@ -57,7 +58,6 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
-
         <script src="js/main.js"></script>
     </body>
 </html>
